# rust-axum

./: .env  Cargo.toml  README.md  application.yml
src/: app.rs  common.rs  database.rs  error.rs  latency.rs  lib.rs  main.rs  param_valid.rs  serde.rs  server.rs  valid.rs
src/config/: database.rs  mod.rs  server.rs
src/entity/: mod.rs  prelude.rs  sys_user.rs
src/enums/: mod.rs
src/framework/: common.rs  error.rs  mod.rs  response.rs  server.rs
src/framework/auth/: mod.rs
src/framework/middleware/: logger.rs  mod.rs
src/framework/request/: mod.rs  param_valid.rs  valid.rs
src/framework/utils/: generator.rs
src/routes/: mod.rs  user.rs
src/sql/: schema.sql
src/utils/: mod.rs  validation.rs
